<resources>
    <string name="backup_list_adapter_local_contacts">Local contacts</string>
    <string name="preview_text_string_fragment_open_rich_text_editor_error_message">Failed to open text editor</string>
    <string name="bottom_navigation_menu_files_label">All files</string>
    <string name="bottom_navigation_menu_favorites_label">Favorites</string>
    <string name="bottom_navigation_menu_assistant_label">Assistant</string>
    <string name="bottom_navigation_menu_media_label">Media</string>
    <string name="file_list_error_headline">Poor connection</string>
    <string name="file_list_error_description">Check your internet connection or try again later</string>
    <string name="file_list_out_of_memory_description">Could not load content</string>
    <string name="about_android">%1$s Android app</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_version_with_build">version %1$s, build #%2$s</string>
    <string name="appbar_search_in">Search in %s</string>
    <string name="actionbar_open_with">Open with</string>
    <string name="actionbar_mkdir">New folder</string>
    <string name="actionbar_settings">Settings</string>
    <string name="actionbar_see_details">Share</string>
    <string name="actionbar_send_file">Send</string>
    <string name="actionbar_sort">Sort</string>
    <string name="sort_by">Sort by</string>
    <string name="drawer_item_album">Albums</string>
    <string name="add_media">Add media</string>
    <string name="create_album_dialog_title">New album</string>
    <string name="rename_album_dialog_title">Rename album</string>
    <string name="create_album_dialog_message">Enter your new Album name</string>
    <string name="album_name_empty">Album name cannot be empty</string>
    <string name="album_rename">Rename Album</string>
    <string name="album_share">Share Album</string>
    <string name="rename_dialog_button">Rename</string>
    <string name="album_delete">Delete Album</string>
    <string name="album_delete_failed_message">Failed to delete few of the files.</string>
    <plurals name="album_items_text">
        <item quantity="one">%1$d Item — %2$s</item>
        <item quantity="other">%1$d Items — %2$s</item>
    </plurals>
    <plurals name="album_elements_text">
        <item quantity="one">%d Item</item>
        <item quantity="other">%d Items</item>
    </plurals>
    <string name="album_already_exists">Album already exists</string>
    <string name="album_picker_toolbar_title">Pick Album</string>
    <string name="media_picker_toolbar_title">Pick Media Files</string>
    <string name="empty_albums_title">Create Albums for your Photos</string>
    <string name="empty_albums_message">You can organize all your photos in as many albums as you like. You haven\'t created an album yet.</string>
    <string name="add_to_album">Add to album</string>
    <string name="album_file_added_message">File added successfully</string>
    <string name="album_unsupported_file">Unsupported media</string>
    <string name="album_upload_from_account">Select images from account</string>
    <string name="album_rename_conflict">This name is already in use.</string>
    <string name="album_copy_file_conflict">Already exists.</string>
    <string name="menu_item_sort_by_name_a_z">A - Z</string>
    <string name="menu_item_sort_by_name_z_a">Z - A</string>
    <string name="menu_item_sort_by_date_newest_first">Newest first</string>
    <string name="menu_item_sort_by_date_oldest_first">Oldest first</string>
    <string name="menu_item_sort_by_size_biggest_first">Biggest first</string>
    <string name="menu_item_sort_by_size_smallest_first">Smallest first</string>
    <string name="oc_file_list_adapter_offline_operation_description_text">Pending operation</string>
    <string name="ecosystem_apps_display_assistant">Assistant</string>
    <string name="unexpected_error_occurred">Unexpected error occurred</string>
    <string name="app_config_disable_multiaccount_title">Disable Multi Account</string>
    <string name="app_config_disable_sharing_title">Disable Sharing</string>
    <string name="app_config_disable_clipboard_title">Disable Clipboard</string>
    <string name="app_config_disable_more_external_site_title">Disable External Sites</string>
    <string name="app_config_disable_intro_title">Disable Intro</string>
    <string name="app_config_disable_log_title">Disable Log</string>
    <string name="app_config_base_url_title">Base URL</string>
    <string name="app_config_proxy_host_title">Proxy Hostname</string>
    <string name="app_config_proxy_port_title">Proxy Port</string>
    <string name="app_config_enforce_protection_title">Enforce Protection</string>
    <string name="offline_operations_file_does_not_exists_yet">File does not exist yet. Please upload the file first.</string>
    <string name="offline_operations_worker_notification_remove_conflict_text">Cancelled deletion of %s. The file has been modified on the server.</string>
    <string name="offline_operations_worker_notification_rename_conflict_text">Cancelled rename of %s. A file with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_create_file_conflict_text">Could not create %s. A file with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_create_folder_conflict_text">Could not create %s. A folder with the same name exists on the server.</string>
    <string name="offline_operations_worker_notification_start_text">Starting offline operations</string>
    <string name="offline_operations_worker_notification_error_text">The offline operation cannot be completed. %s</string>
    <string name="offline_operations_worker_notification_manager_ticker">Offline Operations</string>
    <string name="offline_operations_worker_progress_text" translatable="false">%1$d / %2$d - %3$s</string>
    <string name="anonymous_account_type" translatable="false">AnonymousAccountType</string>
    <string name="assistant_screen_top_bar_title">Assistant</string>
    <string name="assistant_screen_task_output_empty_text">The task output is not ready yet.</string>
    <string name="assistant_screen_chat_create_error">Failed to send a message</string>
    <string name="assistant_screen_chat_fetch_error">Failed to fetch chat messages</string>
    <string name="assistant_screen_chat_generate_error">Failed to generate response</string>
    <string name="assistant_screen_retry_response_generation">Retry response generation</string>
    <string name="assistant_screen_task_list_error_state_message">Unable to fetch task list, please check your internet connection.</string>
    <string name="assistant_screen_task_list_empty_warning">Task list is empty. Check assistant app configuration.</string>
    <string name="assistant_screen_delete_task_alert_dialog_title">Delete task</string>
    <string name="assistant_screen_delete_task_alert_dialog_description">Are you sure you want to delete this task?</string>
    <string name="assistant_screen_task_more_actions_bottom_sheet_delete_action">Delete Task</string>
    <string name="assistant_screen_task_create_success_message">Task created</string>
    <string name="assistant_screen_task_create_fail_message">An error occurred while creating the task</string>
    <string name="assistant_screen_task_delete_success_message">Task deleted</string>
    <string name="assistant_screen_task_delete_fail_message">An error occurred while deleting the task</string>
    <string name="assistant_screen_task_bar_open_conversation_list">Open conversation list</string>
    <string name="assistant_screen_conversations_go_back_to_assistant">Go back to assistant page</string>
    <string name="assistant_screen_send_message">Send message</string>
    <string name="assistant_task_detail_screen_input_button_title">Input</string>
    <string name="assistant_task_detail_screen_output_button_title">Output</string>
    <string name="assistant_task_status_text">Task status: %1$s</string>
    <string name="assistant_task_status_unknown">unknown</string>
    <string name="assistant_task_status_scheduled">scheduled</string>
    <string name="prefs_category_general">General</string>
    <string name="prefs_category_more">More</string>
    <string name="prefs_lock">Security</string>
    <string name="prefs_lock_title">Protect app using</string>
    <string name="prefs_show_hidden_files">Show hidden files</string>
    <string name="prefs_show_ecosystem_apps">Show app switcher</string>
    <string name="prefs_show_ecosystem_apps_summary">Nextcloud app suggestions in navigation heading</string>
    <string name="prefs_enable_media_scan_notifications">Show media scan notifications</string>
    <string name="prefs_enable_media_scan_notifications_summary">Notify about newly found media folders</string>
    <string name="prefs_daily_backup_summary">Daily backup of your calendar and contacts</string>
    <string name="prefs_mnemonic_summary">Displays your 12 word key (passhprase)</string>
    <string name="prefs_sycned_folders_summary">Manage folders for auto upload</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_imprint">Imprint</string>
    <string name="prefs_keys_exist_summary">End-to-end encryption was already set up on another client. Please enter your mnemonic to allow this client to sync and decrypt the files.</string>
    <string name="about_title">About</string>
    <string name="placeholder_filename" translatable="false">Filename</string>
    <string name="placeholder_extension" translatable="false">.txt</string>
    <string name="auto_upload_on_wifi">Only upload on unmetered Wi-Fi</string>
    <string name="logs_title">Logs</string>
    <string name="prefs_category_details">Details</string>
    <string name="username">Username</string>
    <string name="drawer_synced_folders">Auto upload</string>
    <string name="backup_title">Contacts and calendar backup</string>
    <string name="synced_folders_configure_folders">Configure folders</string>
    <string name="user_icon">User</string>
    <string name="favorite_icon">Favorite</string>
    <string name="synced_icon">Synced</string>
    <string name="checkbox">Checkbox</string>
    <string name="shared_icon_shared_via_link">shared via link</string>
    <string name="overflow_menu">More menu</string>
    <string name="prefs_e2e_mnemonic">End-to-end encryption</string>
    <string name="unread_comments">Unread comments exist</string>
    <string name="grid_file_features_live_photo_content_description">This icon indicates availability of live photo</string>
    <string name="prefs_category_account_info">Account Information</string>
    <string name="video_overlay_icon">Video overlay icon</string>
    <string name="prefs_setup_e2e">Start end-to-end encryption</string>
    <string name="prefs_remove_e2e">Remove encryption locally</string>
    <string name="remove_e2e">You can remove end-to-end encryption locally on this device.</string>
    <string name="setup_e2e">After starting the encryption, a randomly generated word sequence (passphrase) of 12 words is displayed. This remains in this app and can be displayed again. Nevertheless, we recommend that you write down the passphrase.</string>
    <string name="prefs_keys_exist">Add end-to-end encryption to this client</string>
    <string name="prefs_category_info">Info</string>
    <string name="prefs_category_data_privacy">Data Privacy</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="prefs_open_source">Used OpenSource Software</string>
    <string name="prefs_category_service">Service</string>
    <string name="prefs_category_sync">Sync</string>
    <string name="internal_two_way_sync">Internal two way sync</string>
    <string name="prefs_two_way_sync_summary">Manage internal folders for two way sync</string>
</resources>